--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,40 +13,23 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.0.2
         with:
-          msbuild-version: '16.0'
+          msbuild-version: '17.0'
       # setup GH Cli
-      - name: Download and Install GitHub CLI
-        run: |
-          Invoke-WebRequest -Uri "https://github.com/cli/cli/releases/download/v2.31.0/gh_2.31.0_windows_386.msi" -OutFile "gh.msi"
-          Start-Process -Wait -FilePath "msiexec.exe" -ArgumentList "/i gh.msi /quiet"
-          gh --version
+      # - name: Download and Install GitHub CLI
+      #   run: |
+      #     Invoke-WebRequest -Uri "https://github.com/cli/cli/releases/download/v2.31.0/gh_2.31.0_windows_386.msi" -OutFile "gh.msi"
+      #     Start-Process -Wait -FilePath "msiexec.exe" -ArgumentList "/i gh.msi /quiet"
+      #     gh --version
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.408
           include-prerelease: true
           include: web
-      # Build the Code using MS Build
+    
       - name: Build with MSBuild
-        run: msbuild /p:Configuration=Release /t:restore,build /p:UseSharedCompilation=false
+        run: msbuild LoginApp.sln /p:deployonbuild=true /t:clean,rebuild 
       
-      - name: Package the code
-        run: dotnet pack --configuration Release --output ./packages
-        
-      - name: Publish artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: packages
-          path: ./packages
-
-      # - name: Package and publish to GitHub Releases
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     # Create a build folder and copy the necessary files
-      #     New-Item -ItemType Directory -Force -Path "build"
-      #     Copy-Item -Path "./bin/Release/**" -Destination "build"
-      #     # Compress the build folder
-      #     Compress-Archive -Path "build" -DestinationPath "dot-net-code.zip"
-      #     # Publish the release using GitHub CLI
-      #     gh release create "publish-V1" -t "v1" "dot-net-code.zip"
+      # - name: Package the code
+      #   run: dotnet pack --configuration Release --output ./packages
+      
