--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,14 @@ jobs:
           dotnet-version: 3.1.408
           include-prerelease: true
           include: web
-    
+
+      - name: clean code
+        run: msbuild LoginApp.sln /p:deployonbuild=true /t:clean
+
+      - name: list 
+        run: |
+           ls .\LoginApp\bin\
+           ls .\LoginApp\bin\package\
       - name: Build with MSBuild
         run: msbuild LoginApp.sln /p:deployonbuild=true /t:clean,rebuild 
       
