--- a/LoginApp/Web.config
+++ b/LoginApp/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+    <appSettings>
+        <add key="ApiKey" value="" />
+        <add key="ConnectionStr" value="" />
+    </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
