--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,12 @@ jobs:
       #     Invoke-WebRequest -Uri "https://github.com/cli/cli/releases/download/v2.31.0/gh_2.31.0_windows_386.msi" -OutFile "gh.msi"
       #     Start-Process -Wait -FilePath "msiexec.exe" -ArgumentList "/i gh.msi /quiet"
       #     gh --version
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 3.1.408
-          include-prerelease: true
-          include: web
+      # - name: Setup .NET Core
+      #   uses: actions/setup-dotnet@v1
+      #   with:
+      #     dotnet-version: 3.1.408
+      #     include-prerelease: true
+      #     include: web
 
       - name: Update web.config
         run: |
@@ -40,8 +40,9 @@ jobs:
           $webConfig.configuration.appSettings.'add' | Where-Object { $.key -eq 'ApiKey' } | ForEach-Object { $.value = $apiKey }
           $webConfig.configuration.appSettings.'add' | Where-Object { $.key -eq 'ConnectionStr' } | ForEach-Object { $.value = $connectionStr }
 
+          $webConfig
           # Save the modified XML back to web.config
-          $webConfig.Save('.\LoginApp\web.config')
+          # $webConfig.Save('.\LoginApp\web.config')
 
       # - name: clean code
       #   run: msbuild LoginApp.sln /p:deployonbuild=true /t:clean
