--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,11 +47,16 @@ jobs:
           # Load the web.config as an XML document
           [xml]$webConfig = Get-Content -Path .\LoginApp\web.config
           #  Update appSettings keys with secret values
-          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ApiKey' } | ForEach-Object { $_.value = '$apiKey' }
-          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ConnectionStr' } | ForEach-Object { $_.value = '$connectionStr' }
-          $webConfig.configuration.appSettings.add
+          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ApiKey' } | ForEach-Object { $_.value = "$apiKey" }
+          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ConnectionStr' } | ForEach-Object { $_.value = "$connectionStr" }
+        
           # Save the modified XML back to web.config
-          # $webConfig.Save('.\LoginApp\web.config')
+           $webConfig.Save('.\LoginApp\web.config')
+
+      - uses: actions/upload-artifact@v3
+        with:
+             name: my-artifact
+             path: .\LoginApp\web.config
           
 
       # - name: clean code
