--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,8 @@ jobs:
           # Load the web.config as an XML document
           [xml]$webConfig = Get-Content -Path .\LoginApp\web.config
           #  Update appSettings keys with secret values
-          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ApiKey' } | ForEach-Object { $_.value = "$apiKey" }
-          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ConnectionStr' } | ForEach-Object { $_.value = "$connectionStr" }
+          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ApiKey' } | ForEach-Object { $_.value = "apiKey" }
+          $webConfig.configuration.appSettings.'add' | Where-Object { $_.key -eq 'ConnectionStr' } | ForEach-Object { $_.value = "connectionStr" }
         
           # Save the modified XML back to web.config
            $webConfig.Save('.\LoginApp\web.config')
